@@ -20,7 +20,8 @@ endif
 COPTFLAG=-O3 -Wall
 FOPTFLAG=-O3
 
-CPPFLAGS=$(PKG_CPPFLAGS) -I$(RHOME)/include
+## devWindows.c need R_ARCH defined
+CPPFLAGS=$(PKG_CPPFLAGS) -I$(RHOME)/include $(arch_DEFS)
 CFLAGS=$(PKG_CFLAGS) $(DEBUGFLAG) $(COPTFLAG)
 FFLAGS=$(PKG_FFLAGS) $(DEBUGFLAG) $(FOPTFLAG)
 DLLLIBS=-L$(RHOME)/$(IMPDIR) $(PKG_LIBS) -lR
